<resources>
    <string name="app_name">NewApp</string>
    <string name="main_activity_hello_world"></string>
    <string name="main_activity_hello_world2">Hello Wolrd!</string>
    <string name="button">ChangeView</string>
    <string name="buttonOk">PRONTO</string>
    <string name="buttonCancel">Create Alarm</string>
    <string name="button2">+1 Gado</string>
    <string name="name">FI DI QUEM?</string>
    <string name="second_activity_message">"Owner: %1$s Car: %2$s "</string>
</resources>